--- a/ProjetoBSIBDProg3/nbproject/project.properties
+++ b/ProjetoBSIBDProg3/nbproject/project.properties
@@ -27,9 +27,25 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProjetoBSIBDProg3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=C:\\Users\\Bruno\\Documents\\NetBeansProjects\\Libs\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\Bruno\\Documents\\NetBeansProjects\\Libs\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\Bruno\\Documents\\NetBeansProjects\\Libs\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\Bruno\\Documents\\NetBeansProjects\\Libs\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\Bruno\\Documents\\NetBeansProjects\\Libs\\commons-logging-1.1.jar
+file.reference.groovy-all-2.0.1.jar=C:\\Users\\Bruno\\Documents\\NetBeansProjects\\Libs\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=C:\\Users\\Bruno\\Documents\\NetBeansProjects\\Libs\\iText-2.1.7.js2.jar
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\Bruno\\Documents\\NetBeansProjects\\Libs\\jasperreports-5.6.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
