--- a/ProjetoBSIBDProg3/nbproject/project.properties
+++ b/ProjetoBSIBDProg3/nbproject/project.properties
@@ -45,7 +45,8 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.groovy-all-2.0.1.jar}:\
     ${file.reference.iText-2.1.7.js2.jar}:\
-    ${file.reference.jasperreports-5.6.0.jar}
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
